Add the paginator block to the base template

--- a/comicsdb/templates/comicsdb/base.html
+++ b/comicsdb/templates/comicsdb/base.html
@@ -28,5 +28,12 @@
         {% block content %}{% endblock %}
       </div>
     </section>
+    {% if is_paginated %}
+    <section class="section">
+      <div class="container">
+        {% block pagination %}{% endblock %}
+      </div>
+    </section>
+    {% endif %}
   </body>
 </html>
