--- a/comicsdb/templates/comicsdb/base.html
+++ b/comicsdb/templates/comicsdb/base.html
@@ -10,6 +10,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body class="has-navbar-fixed-top">
+
     <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item ">
@@ -23,11 +24,13 @@
         </div>
       </div>
     </nav>
+
     <section class="section">
       <div class="container">
         {% block content %}{% endblock %}
       </div>
     </section>
+
     {% if is_paginated %}
     <section class="section">
       <div class="container">
@@ -35,5 +38,16 @@
       </div>
     </section>
     {% endif %}
+
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>
+          Icons made by <a href="http://www.freepik.com" title="Freepik" target="_blank">Freepik</a>
+          from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a>
+          is licensed by
+          <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
