Fix a potential security problem with using link "_blank" target.
* Add noopener & noreferrer attributes.

--- a/comicsdb/templates/comicsdb/base.html
+++ b/comicsdb/templates/comicsdb/base.html
@@ -42,10 +42,16 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <p>
-          Icons made by <a href="http://www.freepik.com" title="Freepik" target="_blank">Freepik</a>
-          from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a>
+          Icons made by
+          <a href="http://www.freepik.com" title="Freepik" target="_blank" rel="noopener noreferrer">Freepik</a>
+          from
+          <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">
+            www.flaticon.com
+          </a>
           is licensed by
-          <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+          <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank" rel="noopener noreferrer">
+            CC 3.0 BY
+          </a>
         </p>
       </div>
     </footer>
