--- a/comicsdb/templates/comicsdb/publisher_list.html
+++ b/comicsdb/templates/comicsdb/publisher_list.html
@@ -4,6 +4,32 @@
 {% block page-title %}Publisher List{% endblock page-title %}
 
 {% block content %}
+
+  <nav class="level">
+    <div class="level-left">
+      <div class="level-item">
+        <p class="subtitle is-5">
+          <strong>{{ publisher_list.count }}</strong> Publishers
+        </p>
+      </div>
+      <div class="level-item">
+        <div class="field has-addons">
+          <p class="control">
+            <input class="input" type="text" placeholder="Find a publisher">
+          </p>
+          <p class="control">
+            <button class="button">
+              Search
+            </button>
+          </p>
+        </div>
+    </div>
+    </div>
+    <div class="level-right">
+      <p class="level-item"><a class="button is-success">New</a></p>
+    </div>
+  </nav>
+
   {% if publisher_list %}
     <div class="columns is-multiline">
       {% for publisher in publisher_list %}
