--- a/comicsdb/templates/comicsdb/publisher_list.html
+++ b/comicsdb/templates/comicsdb/publisher_list.html
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="level-right">
-        <p class="level-item"><a class="button is-success" href="{% url 'create:publisher' %}">New</a></p>
+        <p class="level-item"><a class="button is-success" href="{% url 'publisher:create' %}">New</a></p>
       </div>
     </nav>
 
