Add a tooltip for the new publisher button

--- a/comicsdb/templates/comicsdb/publisher_list.html
+++ b/comicsdb/templates/comicsdb/publisher_list.html
@@ -31,7 +31,9 @@
         </div>
       </div>
       <div class="level-right">
-        <p class="level-item"><a class="button is-success" href="{% url 'publisher:create' %}">New</a></p>
+        <p class="level-item">
+          <a class="button is-success" href="{% url 'publisher:create' %}" title="Add a new publisher">New</a>
+        </p>
       </div>
     </nav>
 
