--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -4,14 +4,22 @@
 {% block page-title %}Publisher Detail{% endblock page-title %}
 
 {% block content %}
-<section class="hero is-info is-small">
-  <div class="hero-body">
-    <div class="container">
-      <h1 class="title">{{ publisher.name }}</h1>
-      {% if publisher.founded %}
-        <h2 class="subtitle">Founded in {{ publisher.founded|date:"Y" }}</h2>
-      {% endif %}
+  <section class="hero is-info is-small">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">{{ publisher.name }}</h1>
+        {% if publisher.founded %}
+          <h2 class="subtitle">Founded in {{ publisher.founded|date:"Y" }}</h2>
+        {% endif %}
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+  {% if publisher.desc %}
+    <section>
+      <div class="container">
+        <h2 class="title">Description</h2>
+        <h3 class="subtitle">{{ publisher.desc|linebreaksbr }}</h3>
+      </div>
+    </section>
+  {% endif %}
 {% endblock %}
