--- a/comicsdb/templates/comicsdb/publisher_list.html
+++ b/comicsdb/templates/comicsdb/publisher_list.html
@@ -32,7 +32,7 @@
       </div>
       <div class="level-right">
         <p class="level-item">
-          <a class="button is-success" href="{% url 'publisher:create' %}" title="Add a new publisher">New</a>
+          <a class="button is-primary" href="{% url 'publisher:create' %}" title="Add a new publisher">New</a>
         </p>
       </div>
     </nav>
