Modify the modals fields for changs to Publisher & Series
* Modified the Publisher model's founded to a PositiveSmallIntegerField
  since we only want the year.
* Modified the Series model's volume, year_began, and year_end to
  accept blank values.
* Changed the Publisher form & publisher_detail template for these
  changes.
* Modified the Series admin page for the series_type field name change.

--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -20,7 +20,7 @@
       <div class="container">
         <h1 class="title">{{ publisher.name }}</h1>
         {% if publisher.founded %}
-          <h2 class="subtitle">Founded in {{ publisher.founded|date:"Y" }}</h2>
+          <h2 class="subtitle">Founded in {{ publisher.founded }}</h2>
         {% endif %}
       </div>
     </div>
