Add a SeriesList & SearchSeriesList views

--- a/comicsdb/templates/comicsdb/base.html
+++ b/comicsdb/templates/comicsdb/base.html
@@ -20,7 +20,7 @@
       <div class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item" href="{% url 'publisher:list' page=1 %}">Publishers</a>
-          <a class="navbar-item">Series</a>
+          <a class="navbar-item" href="{% url 'series:list' page=1 %}">Series</a>
         </div>
       </div>
     </nav>
