--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -18,7 +18,7 @@
   <section class="hero is-info is-small">
     <div class="hero-body">
       <div class="container">
-        <h1 class="title">{{ series.name }} {% if series.year_began %}({{ series.year_began }}){% endif %}</h1>
+        <h1 class="title">{{ series }}</h1>
         {% if series.series_type %}
           <h2 class="subtitle">{{ series.series_type }}</h2>
         {% endif %}
