--- a/comicsdb/templates/comicsdb/series_list.html
+++ b/comicsdb/templates/comicsdb/series_list.html
@@ -32,7 +32,7 @@
       </div>
       <div class="level-right">
         <p class="level-item">
-          <a class="button is-primary" href="" title="Add a new series">New</a>
+          <a class="button is-primary" href="{% url 'series:create' %}" title="Add a new series">New</a>
         </p>
       </div>
     </nav>
