Use Bulma's select component on the Series form

--- a/comicsdb/templates/comicsdb/series_form.html
+++ b/comicsdb/templates/comicsdb/series_form.html
@@ -19,11 +19,15 @@
     </div>
     <div class="field">
       <label class="label">Publisher</label>
-      <div class="control">{{ form.publisher }}</div>
+      <div class="control">
+        <div class="select">{{ form.publisher }}</div>
+      </div>
     </div>
     <div class="field">
       <label class="label">Series Type</label>
-      <div class="control">{{ form.series_type }}</div>
+      <div class="control">
+        <div class="select">{{ form.series_type }}</div>
+      </div>
     </div>
     <div class="field">
       <label class="label">Volume</label>
