Remove the enctype for the Series form template

--- a/comicsdb/templates/comicsdb/series_form.html
+++ b/comicsdb/templates/comicsdb/series_form.html
@@ -3,7 +3,7 @@
 {% block page-title %}Series Form{% endblock page-title %}
 
 {% block content %}
-  <form method="post" enctype="multipart/form-data">
+  <form method="post">
   {% csrf_token %}
     <div class="field">
       <label class="label">Series Name</label>
