--- a/comicsdb/templates/comicsdb/base.html
+++ b/comicsdb/templates/comicsdb/base.html
@@ -21,6 +21,7 @@
         <div class="navbar-start">
           <a class="navbar-item" href="{% url 'publisher:list' page=1 %}">Publishers</a>
           <a class="navbar-item" href="{% url 'series:list' page=1 %}">Series</a>
+          <a class="navbar-item" href="{% url 'issue:list' page=1 %}">Issues</a>
         </div>
       </div>
     </nav>
