--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -32,7 +32,7 @@
       </div>
       <div class="level-right">
         <p class="level-item">
-          <a class="button is-primary" title="Add a new issue">New</a>
+          <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">New</a>
         </p>
       </div>
     </nav>
