Tweak publisher_detail template

--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -47,10 +47,10 @@
     <div class="column">
       <div class="box">
         {% if publisher.desc %}
-          <h1 class="title is-4">Summary</h1>
-          <h2 class="subtitle is-5">{{ publisher.desc|linebreaksbr }}</h2>
+          <h1 class="title is-5">Summary</h1>
+          <p>{{ publisher.desc|linebreaksbr }}</p>
         {% else %}
-           <h1 class="title is-4">No information available.</h1>
+           <h1 class="title is-5">No information available.</h1>
         {% endif %}
       </div>
     </div>
