Increase the image column size in the issue_detail template

--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -27,7 +27,7 @@
   <!-- main page content -->
   <div class="columns">
     <!-- issue image -->
-    <div class="column is-one-fifth">
+    <div class="column is-one-quarter">
       <div class="box">
         <figure class="image is-2by3">
           {% if issue.image %}
