Add Creator views to project

--- a/comicsdb/templates/comicsdb/base.html
+++ b/comicsdb/templates/comicsdb/base.html
@@ -22,6 +22,7 @@
           <a class="navbar-item" href="{% url 'publisher:list' page=1 %}">Publishers</a>
           <a class="navbar-item" href="{% url 'series:list' page=1 %}">Series</a>
           <a class="navbar-item" href="{% url 'issue:list' page=1 %}">Issues</a>
+          <a class="navbar-item" href="{% url 'creator:list' page=1 %}">Creators</a>
         </div>
       </div>
     </nav>
