--- a/comicsdb/templates/comicsdb/creator_list.html
+++ b/comicsdb/templates/comicsdb/creator_list.html
@@ -43,13 +43,13 @@
         <a href="{% url 'creator:detail' creator.slug %}">
           <figure class="image is-square">
           {% if creator.image %}
-            <img src="{{ creator.image.url }}" alt = "{{ creator }}" >
+            <img src="{{ creator.image.url }}" alt = "{{ creator.get_full_name }}" >
           {% else %}
-            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ creator }}" >
+            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ creator.get_full_name }}" >
           {% endif %}
           </figure>
         </a>
-        <a href="{% url 'creator:detail' creator.slug %}">{{ creator }}</a>
+        <a href="{% url 'creator:detail' creator.slug %}">{{ creator.get_full_name }}</a>
       </div>
       {% endfor %}
   </div>
